// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`t-call (template calling) basic caller 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const callTemplate_1 = app.getTemplate(\`_basic-callee\`);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = callTemplate_1.call(this, ctx, node, key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) basic caller 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<span>ok</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-call (template calling) basic caller, no parent node 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const callTemplate_1 = app.getTemplate(\`_basic-callee\`);
  
  return function template(ctx, node, key = "") {
    return callTemplate_1.call(this, ctx, node, key + \`__1\`);
  }
}"
`;

exports[`t-call (template calling) basic caller, no parent node 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<span>ok</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-call (template calling) call with several sub nodes on same line 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero } = helpers;
  const callTemplate_1 = app.getTemplate(\`sub\`);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block4 = createBlock(\`<span>hey</span>\`);
  let block6 = createBlock(\`<span>yay</span>\`);
  
  function callBody1(ctx, node, key = "") {
    const b4 = block4();
    const b5 = text(\` \`);
    const b6 = block6();
    return multi([b4, b5, b6]);
  }
  
  return function template(ctx, node, key = "") {
    const lazyBlock1 = callBody1.bind(this, ctx);
    const b2 = callTemplate_1.call(this, Object.assign(Object.create(ctx), {[zero]: lazyBlock1}), node, key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) call with several sub nodes on same line 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = ctx[zero]?.(node, key) || text("");
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) cascading t-call t-out='0' 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero } = helpers;
  const callTemplate_1 = app.getTemplate(\`subTemplate\`);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block4 = createBlock(\`<span>hey</span>\`);
  let block6 = createBlock(\`<span>yay</span>\`);
  
  function callBody1(ctx, node, key = "") {
    const b4 = block4();
    const b5 = text(\` \`);
    const b6 = block6();
    return multi([b4, b5, b6]);
  }
  
  return function template(ctx, node, key = "") {
    const lazyBlock1 = callBody1.bind(this, ctx);
    const b2 = callTemplate_1.call(this, Object.assign(Object.create(ctx), {[zero]: lazyBlock1}), node, key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) cascading t-call t-out='0' 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero } = helpers;
  const callTemplate_1 = app.getTemplate(\`subSubTemplate\`);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block4 = createBlock(\`<span>cascade 0</span>\`);
  
  function callBody1(ctx, node, key = "") {
    const b4 = block4();
    const b5 = ctx[zero]?.(node, key) || text("");
    return multi([b4, b5]);
  }
  
  return function template(ctx, node, key = "") {
    const lazyBlock1 = callBody1.bind(this, ctx);
    const b2 = callTemplate_1.call(this, Object.assign(Object.create(ctx), {[zero]: lazyBlock1}), node, key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) cascading t-call t-out='0' 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero } = helpers;
  const callTemplate_1 = app.getTemplate(\`finalTemplate\`);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block4 = createBlock(\`<span>cascade 1</span>\`);
  
  function callBody1(ctx, node, key = "") {
    const b4 = block4();
    const b5 = ctx[zero]?.(node, key) || text("");
    return multi([b4, b5]);
  }
  
  return function template(ctx, node, key = "") {
    const lazyBlock1 = callBody1.bind(this, ctx);
    const b2 = callTemplate_1.call(this, Object.assign(Object.create(ctx), {[zero]: lazyBlock1}), node, key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) cascading t-call t-out='0' 4`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero } = helpers;
  
  let block1 = createBlock(\`<div><span>cascade 2</span><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = ctx[zero]?.(node, key) || text("");
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) cascading t-call t-out='0', without external divs 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero } = helpers;
  const callTemplate_1 = app.getTemplate(\`subTemplate\`);
  
  let block3 = createBlock(\`<span>hey</span>\`);
  let block5 = createBlock(\`<span>yay</span>\`);
  
  function callBody1(ctx, node, key = "") {
    const b3 = block3();
    const b4 = text(\` \`);
    const b5 = block5();
    return multi([b3, b4, b5]);
  }
  
  return function template(ctx, node, key = "") {
    const lazyBlock1 = callBody1.bind(this, ctx);
    return callTemplate_1.call(this, Object.assign(Object.create(ctx), {[zero]: lazyBlock1}), node, key + \`__1\`);
  }
}"
`;

exports[`t-call (template calling) cascading t-call t-out='0', without external divs 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero } = helpers;
  const callTemplate_1 = app.getTemplate(\`subSubTemplate\`);
  
  let block3 = createBlock(\`<span>cascade 0</span>\`);
  
  function callBody1(ctx, node, key = "") {
    const b3 = block3();
    const b4 = ctx[zero]?.(node, key) || text("");
    return multi([b3, b4]);
  }
  
  return function template(ctx, node, key = "") {
    const lazyBlock1 = callBody1.bind(this, ctx);
    return callTemplate_1.call(this, Object.assign(Object.create(ctx), {[zero]: lazyBlock1}), node, key + \`__1\`);
  }
}"
`;

exports[`t-call (template calling) cascading t-call t-out='0', without external divs 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero } = helpers;
  const callTemplate_1 = app.getTemplate(\`finalTemplate\`);
  
  let block3 = createBlock(\`<span>cascade 1</span>\`);
  
  function callBody1(ctx, node, key = "") {
    const b3 = block3();
    const b4 = ctx[zero]?.(node, key) || text("");
    return multi([b3, b4]);
  }
  
  return function template(ctx, node, key = "") {
    const lazyBlock1 = callBody1.bind(this, ctx);
    return callTemplate_1.call(this, Object.assign(Object.create(ctx), {[zero]: lazyBlock1}), node, key + \`__1\`);
  }
}"
`;

exports[`t-call (template calling) cascading t-call t-out='0', without external divs 4`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero } = helpers;
  
  let block2 = createBlock(\`<span>cascade 2</span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = block2();
    const b3 = ctx[zero]?.(node, key) || text("");
    return multi([b2, b3]);
  }
}"
`;

exports[`t-call (template calling) dynamic t-call 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const call = app.callTemplate.bind(app);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const template1 = (ctx['template']);
    const b2 = call(this, template1, Object.assign(Object.create(ctx), {val: ctx['val']}), node, key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) dynamic t-call 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<foo><block-child-0/></foo>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['val']);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) dynamic t-call 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<bar><block-child-0/></bar>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['val']);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) inherit context 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const callTemplate_1 = app.getTemplate(\`sub\`);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["foo"] = 1;
    ctx["bar"] = 2;
    const b2 = callTemplate_1.call(this, Object.assign(Object.create(ctx), {bar: ctx['bar']}), node, key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) inherit context 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['foo']);
    const b3 = safeOutput(ctx['bar']);
    return multi([b2, b3]);
  }
}"
`;

exports[`t-call (template calling) nested t-calls with magic variable 0 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero } = helpers;
  const callTemplate_1 = app.getTemplate(\`grandchild\`);
  const callTemplate_2 = app.getTemplate(\`child\`);
  
  let block3 = createBlock(\`<p>Some content...</p>\`);
  
  function callBody1(ctx, node, key = "") {
    const lazyBlock1 = callBody2.bind(this, ctx);
    return callTemplate_1.call(this, Object.assign(Object.create(ctx), {[zero]: lazyBlock1}), node, key + \`__1\`);
  }
  
  function callBody2(ctx, node, key = "") {
    return block3();
  }
  
  return function template(ctx, node, key = "") {
    const lazyBlock2 = callBody1.bind(this, ctx);
    return callTemplate_2.call(this, Object.assign(Object.create(ctx), {[zero]: lazyBlock2}), node, key + \`__2\`);
  }
}"
`;

exports[`t-call (template calling) nested t-calls with magic variable 0 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = text(\`grandchild\`);
    const b3 = ctx[zero]?.(node, key) || text("");
    return multi([b2, b3]);
  }
}"
`;

exports[`t-call (template calling) nested t-calls with magic variable 0 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero } = helpers;
  
  return function template(ctx, node, key = "") {
    return ctx[zero]?.(node, key) || text("");
  }
}"
`;

exports[`t-call (template calling) recursive template, part 1 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const callTemplate_1 = app.getTemplate(\`recursive\`);
  
  let block1 = createBlock(\`<div><span>hey</span><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    let b2;
    if (false) {
      b2 = callTemplate_1.call(this, ctx, node, key + \`__1\`);
    }
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) recursive template, part 2 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const callTemplate_1 = app.getTemplate(\`nodeTemplate\`);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = callTemplate_1.call(this, Object.assign(Object.create(ctx), {node: ctx['root']}), node, key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) recursive template, part 2 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput, prepareList, withKey } = helpers;
  const callTemplate_1 = app.getTemplate(\`nodeTemplate\`);
  
  let block1 = createBlock(\`<div><p><block-child-0/></p><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['node'].val);
    const ctx1 = ctx;
    const [k_block3, v_block3, l_block3, c_block3] = prepareList(ctx['node'].children||[]);;
    for (let i1 = 0; i1 < l_block3; i1++) {
      let ctx = Object.create(ctx1);
      ctx[\`subtree\`] = k_block3[i1];
      ctx[\`subtree_first\`] = i1 === 0;
      ctx[\`subtree_last\`] = i1 === k_block3.length - 1;
      ctx[\`subtree_index\`] = i1;
      ctx[\`subtree_value\`] = v_block3[i1];
      const key1 = ctx['subtree_index'];
      c_block3[i1] = withKey(callTemplate_1.call(this, Object.assign(Object.create(ctx), {node: ctx['subtree']}), node, key + \`__1__\${key1}\`), key1);
    }
    const b3 = list(c_block3);
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-call (template calling) recursive template, part 3 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const callTemplate_1 = app.getTemplate(\`nodeTemplate\`);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = callTemplate_1.call(this, Object.assign(Object.create(ctx), {node: ctx['root']}), node, key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) recursive template, part 3 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput, prepareList, withKey } = helpers;
  const callTemplate_1 = app.getTemplate(\`nodeTemplate\`);
  
  let block1 = createBlock(\`<div><p><block-child-0/></p><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['node'].val);
    const ctx1 = ctx;
    const [k_block3, v_block3, l_block3, c_block3] = prepareList(ctx['node'].children||[]);;
    for (let i1 = 0; i1 < l_block3; i1++) {
      let ctx = Object.create(ctx1);
      ctx[\`subtree\`] = k_block3[i1];
      ctx[\`subtree_first\`] = i1 === 0;
      ctx[\`subtree_last\`] = i1 === k_block3.length - 1;
      ctx[\`subtree_index\`] = i1;
      ctx[\`subtree_value\`] = v_block3[i1];
      const key1 = ctx['subtree_index'];
      c_block3[i1] = withKey(callTemplate_1.call(this, Object.assign(Object.create(ctx), {node: ctx['subtree']}), node, key + \`__1__\${key1}\`), key1);
    }
    const b3 = list(c_block3);
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-call (template calling) recursive template, part 4: with t-set recursive index 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const callTemplate_1 = app.getTemplate(\`nodeTemplate\`);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = callTemplate_1.call(this, Object.assign(Object.create(ctx), {recursive_idx: 1, node: ctx['root']}), node, key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) recursive template, part 4: with t-set recursive index 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput, prepareList, withKey } = helpers;
  const callTemplate_1 = app.getTemplate(\`nodeTemplate\`);
  
  let block1 = createBlock(\`<div><p><block-child-0/> <block-child-1/></p><block-child-2/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["recursive_idx"] = ctx['recursive_idx']+1;
    const b2 = safeOutput(ctx['node'].val);
    const b3 = safeOutput(ctx['recursive_idx']);
    const ctx1 = ctx;
    const [k_block4, v_block4, l_block4, c_block4] = prepareList(ctx['node'].children||[]);;
    for (let i1 = 0; i1 < l_block4; i1++) {
      let ctx = Object.create(ctx1);
      ctx[\`subtree\`] = k_block4[i1];
      ctx[\`subtree_first\`] = i1 === 0;
      ctx[\`subtree_last\`] = i1 === k_block4.length - 1;
      ctx[\`subtree_index\`] = i1;
      ctx[\`subtree_value\`] = v_block4[i1];
      const key1 = ctx['subtree_index'];
      c_block4[i1] = withKey(callTemplate_1.call(this, Object.assign(Object.create(ctx), {node: ctx['subtree'], recursive_idx: ctx['recursive_idx']}), node, key + \`__1__\${key1}\`), key1);
    }
    const b4 = list(c_block4);
    return block1([], [b2, b3, b4]);
  }
}"
`;

exports[`t-call (template calling) root t-call with body: t-foreach 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { prepareList, withKey, zero } = helpers;
  const callTemplate_1 = app.getTemplate(\`subTemplate\`);
  
  function callBody1(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList([1]);;
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx[\`i\`] = k_block2[i1];
      const key1 = ctx['i'];
      c_block2[i1] = withKey(text(\`1\`), key1);
    }
    return list(c_block2);
  }
  
  return function template(ctx, node, key = "") {
    const lazyBlock1 = callBody1.bind(this, ctx);
    return callTemplate_1.call(this, Object.assign(Object.create(ctx), {[zero]: lazyBlock1}), node, key + \`__1\`);
  }
}"
`;

exports[`t-call (template calling) root t-call with body: t-foreach 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`sub\`);
  }
}"
`;

exports[`t-call (template calling) root t-call with body: t-if false 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero } = helpers;
  const callTemplate_1 = app.getTemplate(\`subTemplate\`);
  
  function callBody1(ctx, node, key = "") {
    let b3;
    if (false) {
      b3 = text(\`zero\`);
    }
    return multi([b3]);
  }
  
  return function template(ctx, node, key = "") {
    const lazyBlock1 = callBody1.bind(this, ctx);
    return callTemplate_1.call(this, Object.assign(Object.create(ctx), {[zero]: lazyBlock1}), node, key + \`__1\`);
  }
}"
`;

exports[`t-call (template calling) root t-call with body: t-if false 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`sub\`);
  }
}"
`;

exports[`t-call (template calling) root t-call with body: t-if true 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero } = helpers;
  const callTemplate_1 = app.getTemplate(\`subTemplate\`);
  
  function callBody1(ctx, node, key = "") {
    let b3;
    if (true) {
      b3 = text(\`zero\`);
    }
    return multi([b3]);
  }
  
  return function template(ctx, node, key = "") {
    const lazyBlock1 = callBody1.bind(this, ctx);
    return callTemplate_1.call(this, Object.assign(Object.create(ctx), {[zero]: lazyBlock1}), node, key + \`__1\`);
  }
}"
`;

exports[`t-call (template calling) root t-call with body: t-if true 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`sub\`);
  }
}"
`;

exports[`t-call (template calling) root t-call with body: t-out with default 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput, zero } = helpers;
  const callTemplate_1 = app.getTemplate(\`subTemplate\`);
  
  function callBody1(ctx, node, key = "") {
    return safeOutput(ctx['nothing']);
  }
  
  return function template(ctx, node, key = "") {
    const lazyBlock1 = callBody1.bind(this, ctx);
    return callTemplate_1.call(this, Object.assign(Object.create(ctx), {[zero]: lazyBlock1}), node, key + \`__1\`);
  }
}"
`;

exports[`t-call (template calling) root t-call with body: t-out with default 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`sub\`);
  }
}"
`;

exports[`t-call (template calling) scoped parameters 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero, safeOutput } = helpers;
  const callTemplate_1 = app.getTemplate(\`sub\`);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  function callBody1(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["foo"] = 42;
  return text('');
  }
  
  return function template(ctx, node, key = "") {
    const lazyBlock1 = callBody1.bind(this, ctx);
    const b2 = callTemplate_1.call(this, Object.assign(Object.create(ctx), {[zero]: lazyBlock1}), node, key + \`__1\`);
    const b3 = safeOutput(ctx['foo']);
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-call (template calling) scoped parameters 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`ok\`);
  }
}"
`;

exports[`t-call (template calling) scoped parameters, part 2 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput, zero } = helpers;
  const callTemplate_1 = app.getTemplate(\`sub\`);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  function callBody1(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["foo"] = 42;
    return safeOutput(ctx['foo']);
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["foo"] = 11;
    const lazyBlock1 = callBody1.bind(this, ctx);
    const b2 = callTemplate_1.call(this, Object.assign(Object.create(ctx), {foo: 43, [zero]: lazyBlock1}), node, key + \`__1\`);
    const b4 = safeOutput(ctx['foo']);
    return block1([], [b2, b4]);
  }
}"
`;

exports[`t-call (template calling) scoped parameters, part 2 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput, zero } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['foo']);
    const b3 = ctx[zero]?.(node, key) || text("");
    return multi([b2, b3]);
  }
}"
`;

exports[`t-call (template calling) t-call and translation contexts 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero } = helpers;
  const callTemplate_1 = app.getTemplate(\`sub\`);
  
  function callBody1(ctx, node, key = "") {
    return text(\`jeu\`);
  }
  
  return function template(ctx, node, key = "") {
    const lazyBlock1 = callBody1.bind(this, ctx);
    return callTemplate_1.call(this, Object.assign(Object.create(ctx), {title: 'title', [zero]: lazyBlock1}), node, key + \`__1\`);
  }
}"
`;

exports[`t-call (template calling) t-call and translation contexts 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput, zero } = helpers;
  
  let block1 = createBlock(\`<span title="title"><block-child-0/><block-child-1/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['title']);
    const b3 = ctx[zero]?.(node, key) || text("");
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-call (template calling) t-call and translation contexts, variation 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero } = helpers;
  const callTemplate_1 = app.getTemplate(\`sub\`);
  
  function callBody1(ctx, node, key = "") {
    return text(\`jeu\`);
  }
  
  return function template(ctx, node, key = "") {
    const lazyBlock1 = callBody1.bind(this, ctx);
    return callTemplate_1.call(this, Object.assign(Object.create(ctx), {title: \`titulo\`, [zero]: lazyBlock1}), node, key + \`__1\`);
  }
}"
`;

exports[`t-call (template calling) t-call and translation contexts, variation 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput, zero } = helpers;
  
  let block1 = createBlock(\`<span title="title"><block-child-0/><block-child-1/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['title']);
    const b3 = ctx[zero]?.(node, key) || text("");
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-call (template calling) t-call with attributes 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const callTemplate_1 = app.getTemplate(\`sub\`);
  
  return function template(ctx, node, key = "") {
    return callTemplate_1.call(this, Object.assign(Object.create(ctx), {'v1': ctx['val1'], 'v2': ctx['val2']}), node, key + \`__1\`);
  }
}"
`;

exports[`t-call (template calling) t-call with attributes 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/><block-child-1/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['v1']);
    const b3 = safeOutput(ctx['v2']);
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-call (template calling) t-call with attributes and t-call-context 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const callTemplate_1 = app.getTemplate(\`sub\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx['obj'];
    return callTemplate_1.call(this, Object.assign({}, ctx1, {'v1': ctx['val1'], 'v2': ctx['val2']}), node, key + \`__1\`);
  }
}"
`;

exports[`t-call (template calling) t-call with attributes and t-call-context 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/><block-child-1/><block-child-2/><block-child-3/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['v1']);
    const b3 = safeOutput(ctx['v2']);
    const b4 = safeOutput(ctx['v3']);
    const b5 = safeOutput(ctx['v4']);
    return block1([], [b2, b3, b4, b5]);
  }
}"
`;

exports[`t-call (template calling) t-call with attributes and t-out='0' 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero } = helpers;
  const callTemplate_1 = app.getTemplate(\`sub\`);
  
  function callBody1(ctx, node, key = "") {
    return text(\`Hello\`);
  }
  
  return function template(ctx, node, key = "") {
    const lazyBlock1 = callBody1.bind(this, ctx);
    return callTemplate_1.call(this, Object.assign(Object.create(ctx), {'v_2': 1, [zero]: lazyBlock1}), node, key + \`__1\`);
  }
}"
`;

exports[`t-call (template calling) t-call with attributes and t-out='0' 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput, zero } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/><block-child-1/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['v_2']);
    const b3 = ctx[zero]?.(node, key) || text("");
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-call (template calling) t-call with body content as root of a template 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero } = helpers;
  const callTemplate_1 = app.getTemplate(\`antony\`);
  
  let block2 = createBlock(\`<p>antony</p>\`);
  
  function callBody1(ctx, node, key = "") {
    return block2();
  }
  
  return function template(ctx, node, key = "") {
    const lazyBlock1 = callBody1.bind(this, ctx);
    return callTemplate_1.call(this, Object.assign(Object.create(ctx), {[zero]: lazyBlock1}), node, key + \`__1\`);
  }
}"
`;

exports[`t-call (template calling) t-call with body content as root of a template 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero } = helpers;
  
  let block1 = createBlock(\`<foo><block-child-0/></foo>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = ctx[zero]?.(node, key) || text("");
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) t-call with t-if 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const callTemplate_1 = app.getTemplate(\`sub\`);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    let b2;
    if (ctx['flag']) {
      b2 = callTemplate_1.call(this, ctx, node, key + \`__1\`);
    }
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) t-call with t-if 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<span>ok</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-call (template calling) t-call with t-set inside and body text content 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const callTemplate_1 = app.getTemplate(\`sub\`);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["val"] = \`yip yip\`;
    const b2 = callTemplate_1.call(this, Object.assign(Object.create(ctx), {val: ctx['val']}), node, key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) t-call with t-set inside and body text content 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['val']);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) t-call with t-set inside and outside 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { prepareList, withKey } = helpers;
  const callTemplate_1 = app.getTemplate(\`sub\`);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['list']);;
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx[\`v\`] = k_block2[i1];
      ctx[\`v_first\`] = i1 === 0;
      ctx[\`v_last\`] = i1 === k_block2.length - 1;
      ctx[\`v_index\`] = i1;
      ctx[\`v_value\`] = v_block2[i1];
      const key1 = ctx['v_index'];
      ctx["val"] = ctx['v'].val;
      c_block2[i1] = withKey(callTemplate_1.call(this, Object.assign(Object.create(ctx), {'val3': ctx['val']*3}), node, key + \`__1__\${key1}\`), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) t-call with t-set inside and outside 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['val3']);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) t-call with t-set inside and outside. 2 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const callTemplate_1 = app.getTemplate(\`main\`);
  
  let block1 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["w"] = 'fromwrapper';
    const b2 = callTemplate_1.call(this, Object.assign(Object.create(ctx), {w: ctx['w'], list: ctx['list']}), node, key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) t-call with t-set inside and outside. 2 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { prepareList, withKey } = helpers;
  const callTemplate_1 = app.getTemplate(\`sub\`);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['list']);;
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx[\`v\`] = k_block2[i1];
      ctx[\`v_first\`] = i1 === 0;
      ctx[\`v_last\`] = i1 === k_block2.length - 1;
      ctx[\`v_index\`] = i1;
      ctx[\`v_value\`] = v_block2[i1];
      const key1 = ctx['v_index'];
      ctx["val"] = ctx['v'].val;
      c_block2[i1] = withKey(callTemplate_1.call(this, Object.assign(Object.create(ctx), {'val3': ctx['val']*3, w: ctx['w']}), node, key + \`__1__\${key1}\`), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) t-call with t-set inside and outside. 2 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block2 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b3 = safeOutput(ctx['val3']);
    const b2 = block2([], [b3]);
    const b4 = safeOutput(ctx['w']);
    return multi([b2, b4]);
  }
}"
`;

exports[`t-call (template calling) t-call, conditional and t-set in t-call body 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero } = helpers;
  const callTemplate_1 = app.getTemplate(\`callee1\`);
  const callTemplate_2 = app.getTemplate(\`callee2\`);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  function callBody1(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["v"] = 'success';
  return text('');
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    let b2, b3;
    ctx["v1"] = 'elif';
    if (ctx['v1']==='if') {
      b2 = callTemplate_1.call(this, ctx, node, key + \`__1\`);
    } else if (ctx['v1']==='elif') {
      const lazyBlock1 = callBody1.bind(this, ctx);
      b3 = callTemplate_2.call(this, Object.assign(Object.create(ctx), {[zero]: lazyBlock1}), node, key + \`__2\`);
    }
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-call (template calling) t-call, conditional and t-set in t-call body 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<div>callee1</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-call (template calling) t-call, conditional and t-set in t-call body 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div>callee2 <block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['v']);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) t-call-context 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const callTemplate_1 = app.getTemplate(\`sub\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx['obj'];
    return callTemplate_1.call(this, Object.assign({}, ctx1, {this: ctx1, __owl__: this.__owl__}), node, key + \`__1\`);
  }
}"
`;

exports[`t-call (template calling) t-call-context 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['value']);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) t-call-context and value in body 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero } = helpers;
  const callTemplate_1 = app.getTemplate(\`sub\`);
  
  function callBody1(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["value2"] = ctx['aaron'];
  return text('');
  }
  
  return function template(ctx, node, key = "") {
    const lazyBlock1 = callBody1.bind(this, ctx);
    const ctx1 = ctx['obj'];
    return callTemplate_1.call(this, Object.assign({}, ctx1, {this: ctx1, __owl__: this.__owl__}, {[zero]: lazyBlock1}), node, key + \`__1\`);
  }
}"
`;

exports[`t-call (template calling) t-call-context and value in body 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/><block-child-1/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['value1']);
    const b3 = safeOutput(ctx['value2']);
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-call (template calling) t-out inside t-call, with t-set outside 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const callTemplate_1 = app.getTemplate(\`sub\`);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["v"] = \`Hi\`;
    const b2 = callTemplate_1.call(this, ctx, node, key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) t-out inside t-call, with t-set outside 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['v']);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) values set in body are in call context 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero } = helpers;
  const callTemplate_1 = app.getTemplate(\`sub\`);
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  function callBody1(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["foo"] = 'ko';
  return text('');
  }
  
  return function template(ctx, node, key = "") {
    const lazyBlock1 = callBody1.bind(this, ctx);
    const b2 = callTemplate_1.call(this, Object.assign(Object.create(ctx), {foo: 'ok', [zero]: lazyBlock1}), node, key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) values set in body are in call context 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['foo']);
  }
}"
`;

exports[`t-call (template calling) with unused body 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero } = helpers;
  const callTemplate_1 = app.getTemplate(\`sub\`);
  
  function callBody1(ctx, node, key = "") {
    return text(\`WHEEE\`);
  }
  
  return function template(ctx, node, key = "") {
    const lazyBlock1 = callBody1.bind(this, ctx);
    return callTemplate_1.call(this, Object.assign(Object.create(ctx), {[zero]: lazyBlock1}), node, key + \`__1\`);
  }
}"
`;

exports[`t-call (template calling) with unused body 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<div>ok</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-call (template calling) with unused setbody 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero } = helpers;
  const callTemplate_1 = app.getTemplate(\`sub\`);
  
  function callBody1(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["qux"] = 3;
  return text('');
  }
  
  return function template(ctx, node, key = "") {
    const lazyBlock1 = callBody1.bind(this, ctx);
    return callTemplate_1.call(this, Object.assign(Object.create(ctx), {[zero]: lazyBlock1}), node, key + \`__1\`);
  }
}"
`;

exports[`t-call (template calling) with unused setbody 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<div>ok</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-call (template calling) with used body 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero } = helpers;
  const callTemplate_1 = app.getTemplate(\`sub\`);
  
  function callBody1(ctx, node, key = "") {
    return text(\`ok\`);
  }
  
  return function template(ctx, node, key = "") {
    const lazyBlock1 = callBody1.bind(this, ctx);
    return callTemplate_1.call(this, Object.assign(Object.create(ctx), {[zero]: lazyBlock1}), node, key + \`__1\`);
  }
}"
`;

exports[`t-call (template calling) with used body 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { zero } = helpers;
  
  let block1 = createBlock(\`<h1><block-child-0/></h1>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = ctx[zero]?.(node, key) || text("");
    return block1([], [b2]);
  }
}"
`;
